z-index fix

--- a/website/Frontend/src/screens/Desktop/style.css
+++ b/website/Frontend/src/screens/Desktop/style.css
@@ -31,6 +31,7 @@
   justify-content: space-between;
   position: relative;
   width: 100%;
+  z-index: 10;
 }
 
 .desktop .frame-21 {
